# timeheair

./: .gitignore  UPDATER_SETUP.md  bump-version.js  index.html  next.config.js  package.json
.github/workflows/: release.yml
backend/: .gitignore  go.mod  go.sum  main.go
backend/config/: config.go
backend/database/: sqlite.go
backend/handlers/: auth.go  ledger.go  member.go  reservation.go  seat.go  staff.go
backend/middleware/: auth.go
backend/models/: auth.go  ledger.go  member.go  reservation.go  seat.go  staff.go
docs/: PLAN.md  README.md  UI_DESIGN.md  salon-price-menu.md
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  timehair.db
src-tauri/icons/: icon.icns
src-tauri/icons/backup/: icon.icns
src-tauri/src/: auth.rs  database.rs  lib.rs  main.rs  models.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/ledger/: page.tsx
src/app/login/: page.tsx
src/app/members/: page.tsx
src/app/reservations/: page.tsx
src/components/common/: BackupRestore.tsx  Logo.tsx  MainLayout.tsx  UpdateChecker.tsx  VersionInfo.tsx
src/components/dashboard/: SeatCard.tsx  StartServiceModal.tsx
src/components/reservations/: NewReservationModal.tsx
src/layouts/: MainLayout.jsx
src/lib/: AntdRegistry.tsx
src/lib/api/: client.ts
src/lib/data/: initialData.ts  services.ts
src/lib/store/: useStore.ts
src/lib/types/: index.ts
src/pages/: Dashboard.jsx  Ledger.jsx  Members.jsx  Reservations.jsx
